// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/Sidebar should render activity sidebar 1`] = `
<Fragment>
  <ActivitySidebar
    file={
      Object {
        "id": "id",
      }
    }
  />
</Fragment>
`;

exports[`components/ContentSidebar/Sidebar should render details sidebar 1`] = `
<Fragment>
  <DetailsSidebar />
</Fragment>
`;

exports[`components/ContentSidebar/Sidebar should render metadata sidebar 1`] = `
<Fragment>
  <MetadataSidebar />
</Fragment>
`;

exports[`components/ContentSidebar/Sidebar should render no sidebar 1`] = `<Fragment />`;

exports[`components/ContentSidebar/Sidebar should render skills sidebar 1`] = `
<Fragment>
  <SkillsSidebar
    file={
      Object {
        "id": "id",
      }
    }
    key="id"
  />
</Fragment>
`;
